nenolod     2007/05/20 08:56:59 UTC	(20070520-8297)
  Log:
  - CONFIGENTRY -> config_entry_t and friends
  

  Changes:	Modified:
  +2 -2		trunk/include/.indent.pro (File Modified) 
  +2 -2		trunk/include/common.h (File Modified) 
  +10 -10	trunk/include/confparse.h (File Modified) 
  +3 -3		trunk/include/global.h (File Modified) 
  +2 -2		trunk/modules/protocol/.indent.pro (File Modified) 
  +3 -3		trunk/modules/xmlrpc/main.c (File Modified) 
  +2 -2		trunk/src/.indent.pro (File Modified) 
  +210 -210	trunk/src/conf.c (File Modified) 
  +22 -22	trunk/src/confparse.c (File Modified) 


nenolod     2007/05/20 08:31:47 UTC	(20070520-8295)
  Log:
  - add static conf_report_error() function.
  - convert some slog() calls to use that instead.
  

  Changes:	Modified:
  +21 -4	trunk/src/conf.c (File Modified) 


nenolod     2007/05/20 08:20:35 UTC	(20070520-8293)
  Log:
  - return_val_if_fail() wants a value to return, i forgot to provide it with one
  

  Changes:	Modified:
  +1 -1		trunk/src/authcookie.c (File Modified) 


nenolod     2007/05/20 08:16:25 UTC	(20070520-8291)
  Log:
  - configure cleanups, we don't support HP-UX and never have
  

  Changes:	Modified:
  +4 -18	trunk/configure.ac (File Modified) 


nenolod     2007/05/20 08:10:53 UTC	(20070520-8289)
  Log:
  - back out -Wl,-rpath stuff for now.
  

  Changes:	Modified:
  +10 -9	trunk/configure.ac (File Modified) 
  +2 -2		trunk/src/Makefile.in (File Modified) 


nenolod     2007/05/20 07:52:31 UTC	(20070520-8287)
  Log:
  - one of the stubs was marked extern... how the hell does that work?
  

  Changes:	Modified:
  +1 -1		trunk/src/phandler.c (File Modified) 


nenolod     2007/05/20 07:50:24 UTC	(20070520-8285)
  Log:
  - generic_numeric_sts(): implement function from stub, will work for non-UID irc servers
  

  Changes:	Modified:
  +8 -1		trunk/src/phandler.c (File Modified) 


nenolod     2007/05/20 07:44:08 UTC	(20070520-8283)
  Log:
  - convert checks into assertions like in r8279.
  
