@@ -4,7 +4,7 @@
  *
  * This file contains protocol support for hyperion-based ircd.
  *
- * $Id: hyperion.c 8265 2007-05-17 23:06:48Z jilles $
+ * $Id: hyperion.c 8301 2007-05-20 13:22:15Z jilles $
  */
 
 /* option: use SVSLOGIN/SIGNON to remember users even if they're
@@ -17,7 +17,7 @@
 #include "pmodule.h"
 #include "protocol/hyperion.h"
 
-DECLARE_MODULE_V1("protocol/hyperion", TRUE, _modinit, NULL, "$Id: hyperion.c 8265 2007-05-17 23:06:48Z jilles $", "Atheme Development Group <http://www.atheme.org>");
+DECLARE_MODULE_V1("protocol/hyperion", TRUE, _modinit, NULL, "$Id: hyperion.c 8301 2007-05-20 13:22:15Z jilles $", "Atheme Development Group <http://www.atheme.org>");
 
 /* *INDENT-OFF* */
 
@@ -888,6 +888,24 @@ static void m_motd(sourceinfo_t *si, int parc, char *parv[])
 	handle_motd(si->su);
 }
 
+static void nick_group(hook_user_req_t *hdata)
+{
+	user_t *u;
+
+	u = hdata->si->su != NULL && !irccasecmp(hdata->si->su->nick, hdata->mn->nick) ? hdata->si->su : user_find_named(hdata->mn->nick);
+	if (u != NULL && should_reg_umode(u))
+		sts(":%s MODE %s +e", me.name, u->nick);
+}
+
+static void nick_ungroup(hook_user_req_t *hdata)
+{
+	user_t *u;
+
+	u = hdata->si->su != NULL && !irccasecmp(hdata->si->su->nick, hdata->mn->nick) ? hdata->si->su : user_find_named(hdata->mn->nick);
+	if (u != NULL && !nicksvs.no_nick_ownership)
+		sts(":%s MODE %s -e", me.name, u->nick);
+}
+
 void _modinit(module_t * m)
 {
 	/* Symbol relocation voodoo. */
@@ -958,6 +976,11 @@ void _modinit(module_t * m)
 	pcommand_add("SIGNON", m_signon, 5, MSRC_USER);
 	pcommand_add("CAPAB", m_capab, 1, MSRC_UNREG);
 	pcommand_add("MOTD", m_motd, 1, MSRC_USER);
+
+	hook_add_event("nick_group");
+	hook_add_hook("nick_group", (void (*)(void *))nick_group);
+	hook_add_event("nick_ungroup");
+	hook_add_hook("nick_ungroup", (void (*)(void *))nick_ungroup);
 
 	m->mflags = MODTYPE_CORE;
 
