@@ -1,3 +1,13 @@
+jilles      2007/05/20 12:43:02 UTC	(20070520-8299)
+  Log:
+  Add nick_group and nick_ungroup hooks.
+  
+
+  Changes:	Modified:
+  +2 -0		trunk/doc/HOOKS (File Modified) 
+  +15 -0	trunk/modules/nickserv/group.c (File Modified) 
+
+
 nenolod     2007/05/20 08:56:59 UTC	(20070520-8297)
   Log:
   - CONFIGENTRY -> config_entry_t and friends
